--- a/opencollea/templates/base.html
+++ b/opencollea/templates/base.html
@@ -46,6 +46,7 @@
               </li>
 
               <li><a href="#/course-list"><i class="icon-globe icon-white"></i> Discover</a></li>
+              <li><a href="#/discover"><i class="icon-globe icon-white"></i> Discover more</a></li>
               <li><a href="#"><i class="icon-glass icon-white"></i> Socialize</a></li>
               <li><a href="#/new-course"><i class="icon-wrench icon-white"></i> Admin</a></li>
 
