--- a/opencollea/templates/base.html
+++ b/opencollea/templates/base.html
@@ -16,7 +16,7 @@
       <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="navbar-inner">
           <div class="container">
-            <a class="brand" href="#">OpenCollea</a>
+            <a class="brand" href="#/home/">OpenCollea</a>
 
             <!-- My classes -->
             <ul class="nav">
