--- a/opencollea/static/partials/discover/discover.html
+++ b/opencollea/static/partials/discover/discover.html
@@ -25,8 +25,8 @@
             <tr ng-repeat="mixed_course in courses_list | filter:searchQuery">
                 <td>{{ mixed_course.title }}</td>
                 <td>
-                    <button ng-show="mixed_course.hash" class="btn btn-danger">Create Class</button>
-                    <button ng-show="mixed_course.id" class="btn btn-success" ng-click="enroll(mixed_course)">Enroll</button>
+                    <button ng-show="mixed_course.hash" class="btn btn-danger" ng-click="createClassFromMooc(mixed_course)">Create and Enroll in Class</button>
+                    <button ng-show="!mixed_course.hash" class="btn btn-success" ng-click="enroll(mixed_course)">Enroll</button>
                 </td>
             </tr>
         </tbody>
