Odgovarjanje na vprašanja.

--- a/opencollea/static/partials/course/course-questions.html
+++ b/opencollea/static/partials/course/course-questions.html
@@ -1,3 +1,9 @@
+<div class="row-fluid">
+    <a title="Ask Question" class="btn btn-danger pull-right" ng-click="askQuestion()">
+            <i class="icon-trash"></i> Ask question
+    </a>
+</div>
+
 <div class="row-fluid" ng-controller="QAController">
     <ul class="unstyled">
         <li ng-repeat="question in course.questions">
