Zamenjana kanta s plusom na gumbu "Ask question"

--- a/opencollea/static/partials/course/course-questions.html
+++ b/opencollea/static/partials/course/course-questions.html
@@ -1,6 +1,6 @@
 <div class="row-fluid" ng-controller="QAController">
-    <a title="Ask Question" class="btn btn-danger pull-right" ng-click="openModal()">
-            <i class="icon-trash"></i> Ask question
+    <a title="Ask Question" class="btn btn-large btn-success pull-right" ng-click="openModal()">
+            <i class="icon-plus"></i> Ask question
     </a>
 
     <div modal="isModalOpen" options="modalOpts">
