Prikazuje gravatar željenega uporabnika - ne pa trenutnega.

--- a/opencollea/static/partials/profile/user-profile-class.html
+++ b/opencollea/static/partials/profile/user-profile-class.html
@@ -1,7 +1,7 @@
-<div class="row-fluid">
+<div class="row-fluid" ng-controller="UserClassProfileCtrl">
 <div class="span3">
   <div class="big-avatar">
-    <gravatar-image data-email="currentUser.email" data-size="250" data-default="http://www.gravatar.com/avatar/uporabnik-nima-slike?size=250"></gravatar-image>
+    <gravatar-image data-email="user_profile.email" data-size="250" data-default="http://www.gravatar.com/avatar/uporabnik-nima-slike?size=250"></gravatar-image>
     <br>
     <a href="http://gravatar.com/" target="_blank" class="btn btn-mini btn-upload btn-primary">
       <i class="icon-white icon-upload"></i>
@@ -45,7 +45,7 @@
 
 </div>
 
-<div class="span9" ng-controller="UserClassProfileCtrl">
+<div class="span9">
   <h2>{{ user_profile.first_name }} {{ user_profile.last_name }}
       <a href="#/profile/{{currentUser.username}}/edit" class="btn pull-right" ng-show="user_profile.id == currentUser.id">
         <i class="icon-edit"></i>
