--- a/opencollea/templates/base.html
+++ b/opencollea/templates/base.html
@@ -92,6 +92,10 @@
 
 <div class="footer">OpenCollea Copyright 2013</div>
 
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+    <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
+    <script src="//code.angularjs.org/1.0.6/angular.min.js"></script>
+
     {% assets "js_all" %}
         <script type="text/javascript" src="{{ ASSET_URL }}"></script>
     {% endassets %}
